@@ -230,12 +230,12 @@ is not specified or is
 the output from the entire recipe for each target is grouped together.  If
 .I type
 is
-.B job
-the output from each job within a recipe is grouped together.
+.B line
+the output from each line within a recipe is grouped together.
 If
 .I type
 is
-.B make
+.B recurse
 output from an entire recursive make is grouped together.  If
 .I type
 is
