@@ -3,6 +3,7 @@
 	* scripts/features/output-sync (output_sync_set): Remove
 	extraneous enter/leave lines, which are no longer printed.
 	Add tests for syncing command line printing.
+	(output_sync_set): Rename options: "job"->"line"; "make"->"recurse"
 
 2013-05-04  Paul Smith  <psmith@gnu.org>
 
